--- a/templates/index.html
+++ b/templates/index.html
@@ -3,44 +3,49 @@
     <head>
         <meta charset="UTF-8">
         <meta name="vieport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>Job Application Form</h1>
-        <form>
-            <div>
-                <label for="first_name">First name:</label>
-                <input type="text" id="first_name" name="first-name" required>
-            </div>
-            <div>
-                <label for="last_name">Last name:</label>
-                <input type="text" id="last_name" name="las-name" required>
-            </div>
-            <div>
-                <label for="email">E-Mail:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="date">Start date:</label>
-                <input type="date" id="date" name="date" required>
-            </div>
-            <div>
-                <label>Current occupation: </label>
-                <br>
-                <div id="occupation">
-                    <label for="employed">Employed:</label>
-                    <input type="radio" id="employed" name="occupation" required>
-
-                    <label for="unemployed">Unemployed:</label>
-                    <input type="radio" id="unemployed" name="occupation" required>
-
-                    <label for="self_employed">Self-employed:</label>
-                    <input type="radio" id="self_employed" name="occupation" required>
-
-                    <label for="student">Student:</label>
-                    <input type="radio" id="student" name="occupation" required>
+    <div class="container">
+            <h1 class="mt-4 mb-4">Job Application Form</h1>
+            <form>
+                <div class="form-group mb-4">
+                    <label for="first_name">First name:</label>
+                    <input class="form-control" type="text" id="first_name" name="first-name" required>
                 </div>
-            </div>
-            <button type="button">Submit</button>
-        </form>
+                <div class="form-group mb-4">
+                    <label for="last_name">Last name:</label>
+                    <input class="form-control" type="text" id="last_name" name="las-name" required>
+                </div>
+                <div class="form-group mb-4">
+                    <label for="email">E-Mail:</label>
+                    <input class="form-control" type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group mb-4">
+                    <label for="date">Start date:</label>
+                    <input class="form-control" type="date" id="date" name="date" required>
+                </div>
+                <div>
+                    <label>Current occupation: </label>
+                    <br>
+                    <div class="btn-group-vertical mb-4" id="occupation">
+                        <input class="btn-check form-control" type="radio" id="employed" name="occupation" required>
+                        <label class="btn btn-outline-secondary" for="employed">Employed:</label>
+
+                        <input class="btn-check form-control" type="radio" id="unemployed" name="occupation" required>
+                        <label class="btn btn-outline-secondary" for="unemployed">Unemployed:</label>
+
+                        <input class="btn-check form-control" type="radio" id="self_employed" name="occupation" required>
+                        <label class="btn btn-outline-secondary" for="self_employed">Self-employed:</label>
+
+                        <input class="btn-check form-control" type="radio" id="student" name="occupation" required>
+                        <label class="btn btn-outline-secondary" for="student">Student:</label>
+                    </div>
+                </div>
+                <button class="btn btn-secondary mb-4" type="button">Submit</button>
+            </form>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
